welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:3: error: illegal start of simple pattern
for (case <- 1 to 5) { avance();
     ^Poucet:9: error: '<-' expected but '}' found.
	}
        ^