welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var biscuit = 0
for (case <- 1 to 5) { avance();
while (!estSurBiscuit) {avance();biscuit = biscuit +1;
	}
}
